[package]
name = "tulip"
version = "0.2.0"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = [ "Gregory Laurent <gregory.m.laurent@gmail.com>"]
description = "A simple bloom filter using FX Hash"
keywords= [ "tulip", "bloom", "filter" ]
include = ["src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
bencher = "0.1.5"
bit-vec = "0.6.3"
fxhash = "0.2.1"

[[bench]]
name = "benchmarks"
harness = false
