[package]
name = "lupine"
version = "0.3.1"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = [ "Gregory Laurent <gregory.m.laurent@gmail.com>"]
repository = "https://github.com/greglaurent/lupine.git"
description = "A bloom filter using FX Hash with Kirsch and Mitzenmacher optimization."
keywords= [ "lupine", "bloom", "filter", "Kirsch_Mitzenmacher", "FxHash"]
include = ["src/**/*.rs", "benches/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
bencher = "0.1.5"
bit-vec = "0.6.3"
fxhash = "0.2.1"

[[bench]]
name = "benchmarks"
path = "./benches/benchmarks.rs"
harness = false
